Styling for App

--- a/ToDoList/src/app/page-list/page-list.component.html
+++ b/ToDoList/src/app/page-list/page-list.component.html
@@ -1,1 +1,12 @@
-<p>page-list works!</p>
+<app-template-todo-header></app-template-todo-header>
+<div class="list-view">
+    <app-template-todo-form></app-template-todo-form>
+    <h4>Offen <span>(2)</span></h4>
+    <div class="todo-elements">
+        <app-template-todo></app-template-todo>
+        <app-template-todo></app-template-todo>
+        <app-template-todo></app-template-todo>
+    </div>
+    <h4>Erledigt <span>(2)</span></h4>
+    <div class="todo-elements">Hallo</div>
+</div>
