--- a/ToDoList/src/app/template/template-todo/template-todo.component.html
+++ b/ToDoList/src/app/template/template-todo/template-todo.component.html
@@ -1,1 +1,17 @@
-<p>template-todo works!</p>
+<div class="todo">
+    <div class="todo-content">
+        <div class="handle">
+            <img src="./assets/svg/drag.svg" alt="">
+        </div>
+        <div class="todo-content-check">
+            <img src="./assets/svg/checkbox-empty.svg" alt="">
+            <img src="./assets/svg/checkbox-done.svg" alt="">
+        </div>
+        <div class="todo-content-title">
+            <input type="text" placeholder="Name des Todo-Punktes">
+        </div>
+    </div>
+    <div class="delete">
+        <span>Löschen</span>
+    </div>
+</div>
