--- a/ToDoList/src/styles.sass
+++ b/ToDoList/src/styles.sass
@@ -1,1 +1,46 @@
-/* You can add global styles to this file, and also import other style files */
+//Fonts
+@font-face
+    font-family: "Roboto"
+    src: url('./assets/fonts/Roboto-Regular.ttf') format("true")
+    font-weigth: regular
+
+
+@font-face
+    font-family: "Roboto"
+    src: url('./assets/fonts/Roboto-Bold.ttf') format("truetype")
+    font-weigth: bold
+
+
+@font-face
+    font-family: "Roboto Condensed"
+    src: url('./assets/fonts/RobotoCondensed-Regular.ttf') format("truetype")
+    font-weigth: regular
+
+
+@font-face
+    font-family: "Roboto Condensed"
+    src: url('./assets/fonts/RobotoCondensed-Bold.ttf') format("truetype")
+    font-weigth: bold
+
+// -----------------------------------------------------------------------------------------------------------------------
+//Imports
+// -----------------------------------------------------------------------------------------------------------------------
+
+@import './sass/_var.sass'
+
+// -----------------------------------------------------------------------------------------------------------------------
+//Styling
+// -----------------------------------------------------------------------------------------------------------------------
+
+::selection
+    background-color: $prime
+    color: $white
+
+*
+    box-sizing: border-box
+
+body, html 
+    margin: 0
+    padding: 0
+    font-size: 10px
+    background-color: $second
