--- a/ToDoList/src/app/template/template-todo-form/template-todo-form.component.html
+++ b/ToDoList/src/app/template/template-todo-form/template-todo-form.component.html
@@ -1,8 +1,8 @@
 <div class="todo-form">
     <div class="todo-content">
-        <input type="text" placeholder="Name des ToDo-Punktes">
+        <input type="text" [(ngModel)]="todo$.label" (keyup.enter)="createToDo($event)" placeholder="Name des ToDo-Punktes">
     </div>
-    <div class="create">
+    <div class="create" (click)="createToDo($event)">
         <span>Erstellen</span>
     </div>
 </div>
